# LLM-Games

./: .gitignore  README.md  code_snapshot.json  code_snapshot.txt  pyproject.toml
llm_games.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llm_games/mafia/: environment.py  export.py  game_state.py  grpo_mafia.py  play_test.py  player.py  rewards.py  simulation.py
llm_games/mafia/agents/: base_agent.py  llm_agent.py  rule_agent.py
llm_games/mafia/evaluation/: metrics.py
llm_games/mafia/mechanics/: messaging.py  roles.py  voting.py
llm_games/mafia/prompts/: mafia_template.py
mafia/: enums.py  environment.py  export.py  game_state.py  player.py  rewards.py  simulation.py
mafia/agents/: base.py  llm_agent.py
mafia/evaluation/: analysis.py
mafia/mechanics/: messaging.py  night.py  phases.py  roles.py  voting.py
output/sim_results/: games_log.jsonl
